<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
    </parent>

    <groupId>fi.vm.sade.sijoittelu</groupId>
    <artifactId>sijoittelu</artifactId>
    <packaging>pom</packaging>
    <version>10.0.0-SNAPSHOT</version>
    <name>Sijoittelu</name>
    <modules>
        <module>sijoittelu-tulos-api</module>
        <module>sijoittelu-algoritmi-domain</module>
        <module>sijoittelu-algoritmi-batch</module>
        <module>sijoittelu-tulos-service</module>
        <module>sijoittelu-service</module>
   </modules>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/Opetushallitus/sijoittelu</url>
    </repository>
  </distributionManagement>

  <properties>
    <jackson.version>2.18.2</jackson.version>
    <spring.security.version>6.4.4</spring.security.version>
    <valintalaskenta.version>7.0.0-SNAPSHOT</valintalaskenta.version>
    <valintaperusteet-api.version>7.0-SNAPSHOT</valintaperusteet-api.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-database-postgresql</artifactId>
        <version>11.2.0</version>
      </dependency>
      <dependency>
        <groupId>com.sun.activation</groupId>
        <artifactId>jakarta.activation</artifactId>
        <version>2.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.simplejavamail</groupId>
        <artifactId>simple-java-mail</artifactId>
        <version>8.11.1</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.sijoittelu</groupId>
        <artifactId>sijoittelu-algoritmi-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.sijoittelu</groupId>
        <artifactId>sijoittelu-tulos-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.valintaperusteet</groupId>
        <artifactId>valintalaskenta-laskenta-api</artifactId>
        <version>${valintalaskenta.version}</version>
        <exclusions>
          <exclusion>
            <groupId>fi.vm.sade.valintaperusteet</groupId>
            <artifactId>valintaperusteet-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.valintaperusteet</groupId>
        <artifactId>valintaperusteet-api</artifactId>
        <version>${valintaperusteet-api.version}</version>
        <exclusions>
          <exclusion>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.tarjonta</groupId>
        <artifactId>tarjonta-api</artifactId>
        <version>2018-15-SNAPSHOT</version>
        <scope>compile</scope>
        <exclusions>
          <exclusion>
            <artifactId>jsr311-api</artifactId>
            <groupId>javax.ws.rs</groupId>
          </exclusion>
          <exclusion>
            <groupId>com.wordnik</groupId>
            <artifactId>*</artifactId>
          </exclusion>
          <exclusion>
            <artifactId>*</artifactId>
            <groupId>org.springframework</groupId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.cxf</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade</groupId>
        <artifactId>valinta-tulos-valintarekisteri-db</artifactId>
        <version>8.1.0-SNAPSHOT</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.java-utils</groupId>
        <artifactId>opintopolku-cas-servlet-filter</artifactId>
        <version>1.0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.java-utils</groupId>
        <artifactId>java-cas</artifactId>
        <version>1.2.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.java-utils</groupId>
        <artifactId>java-properties</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade</groupId>
        <artifactId>auditlogger</artifactId>
        <version>9.2.5-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>2.6.0</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>2.2.25</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-cas</artifactId>
        <version>${spring.security.version}</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.java-utils</groupId>
        <artifactId>opintopolku-user-details-service</artifactId>
        <version>0.5.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.valinta</groupId>
        <artifactId>valinta-sharedutils</artifactId>
        <version>6.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate.orm</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>6.6.2.Final</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate.validator</groupId>
        <artifactId>hibernate-validator</artifactId>
        <version>8.0.1.Final</version>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.14.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>net.bytebuddy</groupId>
          <artifactId>byte-buddy</artifactId>
          <version>1.15.10</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.7.3</version>
      </dependency>
      <dependency>
        <groupId>org.modelmapper</groupId>
        <artifactId>modelmapper</artifactId>
        <version>3.2.1</version>
      </dependency>
      <dependency>
        <groupId>com.google.errorprone</groupId>
        <artifactId>error_prone_annotations</artifactId>
        <version>2.36.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.12.0</version>
      </dependency>
      <dependency>
        <groupId>commons-logging</groupId>
        <artifactId>commons-logging</artifactId>
        <version>1.2</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>4.4</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-xml</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-yaml</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.12.1</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.okhttp3</groupId>
        <artifactId>mockwebserver</artifactId>
        <version>4.11.0</version>
      </dependency>
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>jakarta.mail</artifactId>
        <version>2.0.1</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback.access</groupId>
        <artifactId>tomcat</artifactId>
        <version>2.0.3</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-servlet-api</artifactId>
        <version>10.1.34</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-coyote</artifactId>
        <version>10.1.34</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-catalina</artifactId>
        <version>10.1.34</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat.embed</groupId>
        <artifactId>tomcat-embed-core</artifactId>
        <version>10.1.34</version>
      </dependency>

      <!-- Lukitaan transitiivisten riippuvuuksien versioita jotta enforcer-plugin ei valita -->
      <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-library</artifactId>
        <version>2.11.12</version>
      </dependency>
      <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-reflect</artifactId>
        <version>2.11.12</version>
      </dependency>
      <dependency>
        <groupId>org.scalaz</groupId>
        <artifactId>scalaz-core_2.11</artifactId>
        <version>7.2.17</version>
      </dependency>
      <dependency>
        <groupId>org.scala-lang.modules</groupId>
        <artifactId>scala-xml_2.11</artifactId>
        <version>1.0.6</version>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>2.9.5</version>
      </dependency>
      <dependency>
        <groupId>org.spire-math</groupId>
        <artifactId>jawn-parser_2.11</artifactId>
        <version>0.10.4</version>
      </dependency>
      <dependency>
        <groupId>fi.vm.sade.java-utils</groupId>
        <artifactId>httpclient</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.joda</groupId>
        <artifactId>joda-convert</artifactId>
        <version>1.8.1</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.checkerframework</groupId>
        <artifactId>checker-qual</artifactId>
        <version>3.43.0</version>
      </dependency>
      <dependency>
        <groupId>org.json4s</groupId>
        <artifactId>json4s-jackson_2.11</artifactId>
        <version>3.5.3</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.18.0</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.woodstox</groupId>
        <artifactId>woodstox-core</artifactId>
        <version>7.0.0</version>
      </dependency>
      <dependency>
        <groupId>org.json4s</groupId>
        <artifactId>json4s-ast_2.11</artifactId>
        <version>3.5.3</version>
      </dependency>
      <dependency>
        <groupId>org.log4s</groupId>
        <artifactId>log4s_2.11</artifactId>
        <version>1.9.0</version>
      </dependency>

      <!-- high-kategorian haavoittuvuuksien korjauksia -->
      <dependency>
        <groupId>org.http4s</groupId>
        <artifactId>blaze-core_2.11</artifactId>
        <version>0.14.15</version>
      </dependency>
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>1.14.2</version>
      </dependency>
      <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-compiler</artifactId>
        <version>2.11.12</version>
      </dependency>
      <dependency>
        <groupId>com.hubspot.jinjava</groupId>
        <artifactId>jinjava</artifactId>
        <version>2.5.4</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/Opetushallitus/packages</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>oph-sade-artifactory-snapshots</id>
      <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
    </repository>
    <repository>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>oph-sade-artifactory-releases</id>
      <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
    </repository>
  </repositories>

  <build>
    <plugins>
        <plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                <execution>
                    <id>write buildversion.txt</id>
                    <phase>process-resources</phase>
                    <goals>
                        <goal>run</goal>
                    </goals>
                    <configuration>
                        <target>
                            <echo message="writing ${project.build.outputDirectory}/static/buildversion.txt"/>
                            <echo file="${project.build.outputDirectory}/static/buildversion.txt">
                                <![CDATA[artifactId=${project.artifactId}
version=${project.version}
buildNumber=${project.build}
branchName=${branch}
vcsRevision=${revision}
buildTtime=${maven.build.timestamp}
]]>
                            </echo>
                            <loadfile property="buildversiontxt" srcFile="${project.build.outputDirectory}/static/buildversion.txt"/>
                            <echo message="${buildversiontxt}"/>
                            <echo file="target/mavenversion.txt">${project.version}</echo>
                        </target>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <inherited>true</inherited>
            <configuration>
              <release>21</release>
              <debug>false</debug>
            </configuration>
        </plugin>
        <plugin>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>enforce-versions</id>
                <phase>clean</phase>
                <goals>
                  <goal>enforce</goal>
                </goals>
                <configuration>
                  <rules>
                    <requireJavaVersion>
                      <version>21</version>
                    </requireJavaVersion>
                    <dependencyConvergence/>
                  </rules>
                </configuration>
              </execution>
            </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <!-- Käytössä on vielä vanhoja kirjastoja jotka käyttävät reflektiota JDK-luokkien käpistelyyn -->
            <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>
      </plugins>
  </build>

</project>
